k8s-manifests/shipping-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shipping-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shipping-service
  template:
    metadata:
      labels:
        app: shipping-service
    spec:
      containers:
        - name: shipping-service
          image: pradipshinde/shipping-service:3
          imagePullPolicy: Always

          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: shipping-service
spec:
  selector:
    app: shipping-service
  ports:
    - port: 80
      targetPort: 5000
