k8s-manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shop-ingress-alb
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-south-1:442147574894:certificate/9484a937-8e7f-49b5-b2e2-94d675648c54 # REPLACE-WITH-YOUR-CERT-ARN
    alb.ingress.kubernetes.io/healthcheck-path: /
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '15'
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '5'
    alb.ingress.kubernetes.io/success-codes: '200'
    alb.ingress.kubernetes.io/healthy-threshold-count: '2'
    alb.ingress.kubernetes.io/unhealthy-threshold-count: '2'
    alb.ingress.kubernetes.io/load-balancer-attributes: idle_timeout.timeout_seconds=60
    alb.ingress.kubernetes.io/group.name: "ecommerce-group"
    alb.ingress.kubernetes.io/group.order: "1"

spec:
  ingressClassName: alb
  rules:
    - host: shop.pradipenterprises.site
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80

    - host: users.pradipenterprises.site
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: users-service
                port:
                  number: 80

    - host: cart.pradipenterprises.site
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cart-service
                port:
                  number: 80

    - host: shipping.pradipenterprises.site
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: shipping-service
                port:
                  number: 80

    - host: payment.pradipenterprises.site
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: payment-service
                port:
                  number: 80
